This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

20-Feb-2004 (Lars Duening)  (3.3.677)
  - (configure, mapping.c, simulate) It is now possible to determine
       the max number of mapping entries (keys) in addition to the total
       mapping size (Bug #0000360).
  - (main.c) New commandline option '--max-mapping-keys' to determine
       separately the maximum number of entries in a mapping.

20-Feb-2004 (Lars Duening)  (3.3.676)
  - (smalloc.c) Corrected a crasher in realloc().
  - (smalloc.c, slaballoc.c) New memory allocated with esbrk() is now
       coagulated with existing free memory if possible (Bug #0000364).

20-Feb-2004 (Lars Duening)  (3.3.675)
  - (pkg-tls.c) Removed compilation errors when using GnuTLS.
  - (comm.c) The charmode/noecho mode is changed in remove_input_to()
       only if the first pending input_to() is removed. Hopefully this
       fixes Bug #0000363.

20-Feb-2004 (Lars Duening)  (3.3.674)
  - (prolang, simulate.c) During the compilation of the master object, simul
       efuns are disabled.

20-Feb-2004 (Lars Duening)  (3.3.673)
  - (smalloc.c, slaballoc.c) The memory block size computation failed
       on large blocks, giving bad statistics.

13-Feb-2004 (Lars Duening)  (3.3.672)
  - (pkg-tls.c) Philip provided a tls_check_certificate() efun.

12-Feb-2004 (Lars Duening)  (3.3.671)
  - (pkg-tls.c) My change was premature.
  - (mstrings.c) The printing of percent values was missing a conversion
      to float in order to actually compute the percent values.

11-Feb-2004 (Lars Duening)  (3.3.670)
  - (mstrings.c) The extended string statistics didn't count the tabled
      comparisons correctly.
  - (lex.c) New macro __BOOT_TIME__ expands to the time() the driver
      was booted.
  - (comm, pkg-tls.c) New interactive_t flag 'outgoing_conn' is TRUE for
      connections openened by net_connect(). This is used by TLS (OpenSSL)