@@ -2799,12 +2799,13 @@ mark_block (word_t *ptr)
 } /* mark_block() */
 
 /*-------------------------------------------------------------------------*/
-static void
+static word_t *
 add_large_free (word_t *ptr, word_t block_size)
 
 /* The large memory block <ptr> with size <block_size> is free:
  * add it to the free list after trying to coagulate it with adjacent
  * ones.
+ * Result is the resulting pointer to the (possibly coagulated) free block.
  */
 
 {
@@ -2826,6 +2827,8 @@ add_large_free (word_t *ptr, word_t block_size)
     /* Mark the block as free and add it to the freelist */
     build_block(ptr, block_size);
     add_to_free_list(ptr);
+
+    return ptr;
 } /* add_large_free() */
 
 /*-------------------------------------------------------------------------*/
@@ -3065,7 +3068,7 @@ found_fit:
         block_size = chunk_size / SINT;
 
         /* Add the block to the free memory */
-        add_large_free(ptr, block_size);
+        ptr = add_large_free(ptr, block_size);
     } /* end of creating a new chunk */
 
     /* ptr is now a pointer to a free block in the free list */
@@ -3194,7 +3197,7 @@ large_free (char *ptr)
     }
 #endif
 
-    add_large_free(p, size);
+    (void)add_large_free(p, size);
 } /* large_free() */
 
 /*-------------------------------------------------------------------------*/
